welcome.lessons.welcome.instructions.Instructions.scala.error
Program:2: error: not found: value Color
setCouleurBrosse(Color.light.Gray);
                 ^