welcome.lessons.welcome.instructions.Instructions.scala.code
setCouleurBrosse(Color.light.Gray);
leveBrosse();
avance(); avance();
droite();
avance(); avance();
droite();
avance(); avance();
droite();
avance();
droite();
avance();

